# MongoLogPipe

./: .gitignore  CMakeLists.txt  README.md  mongoLogPipe.c  sample.cfg
